Basic routing and component organization

--- a/Views/Home/Welcome.cshtml
+++ b/Views/Home/Welcome.cshtml
@@ -2,8 +2,7 @@
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-
 }
 
 
-This is index.html
+Hello !! This is Welcome.cshtml
