--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,6 +13,11 @@
             <link rel="stylesheet" href="~/lib/primeng/resources/primeng.css" />
             <link rel="stylesheet" href="~/lib/font-awesome/css/font-awesome.css" />
             <link rel="stylesheet" href="~/css/style.css" />
+
+            <!-- Icons -->
+            <link rel="stylesheet" href="~/css/font-awesome.css">
+            <link rel="stylesheet" href="~/css/simple-line-icons.css">
+
             <link rel="stylesheet" href="~/css/site.css" />
         </environment>
 
@@ -25,6 +30,11 @@
             <link rel="stylesheet" href="~/lib/primeng/resources/primeng.min.css" />
             <link rel="stylesheet" href="~/lib/font-awesome/css/font-awesome.css" />
             <link rel="stylesheet" href="~/css/style.css" />
+
+            <!-- Icons -->
+            <link rel="stylesheet" href="~/css/font-awesome.min.css">
+            <link rel="stylesheet" href="~/css/simple-line-icons.css">
+
             <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
         </environment>
 
