Added 'restore images' task that will copy images from 'Assets/' folder to 'wwwroot/images' folder (JPG only) Removed 'pretty' from TypeScript configuration because it look weird in VS Added Git section in left menu Added basic Git pages + routing + NgModule for it Added 'bower_components/' folder to gitignore

--- a/wwwroot/app/Layout/layout-footer.component.html
+++ b/wwwroot/app/Layout/layout-footer.component.html
@@ -1,6 +1,6 @@
 ﻿<footer class="footer">
     <span class="text-left">
-        <a href="http://coreui.io">CoreUI</a> &copy; 2016 creativeLabs.
+        <a href="https://github.com/jasper22/Angular2Playground">Angular playground</a> &copy; 2016.
     </span>
     <span class="float-xs-right">
         Powered by <a href="http://coreui.io">CoreUI</a>
