--- a/wwwroot/app/Layout/layout-header.component.html
+++ b/wwwroot/app/Layout/layout-header.component.html
@@ -19,7 +19,10 @@
         </ul>
         <ul class="nav navbar-nav pull-right hidden-md-down">
             <li class="nav-item">
-                <a class="nav-link" href="#"><i class="icon-bell"></i><span class="tag tag-pill tag-danger">5</span></a>
+                <a class="nav-link" href="#">
+                    <i class="icon-bell"></i>
+                    <!--<span class="tag tag-pill tag-danger">5</span>-->
+                </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#"><i class="icon-list"></i></a>
