--- a/wwwroot/app/Layout/left-side-menu-component.html
+++ b/wwwroot/app/Layout/left-side-menu-component.html
@@ -3,7 +3,7 @@
         <ul class="nav">
 
             <li class="nav-item">
-                <a class="nav-link" routerLinkActive="active" [routerLink]="['/']"><i class="icon-speedometer"></i> Dashboard</a>
+                <a class="nav-link" routerLinkActive="active" [routerLink]="['/']"><i class="icon-speedometer"></i> Home</a>
             </li>
 
             <li class="divider"></li>
