--- a/Views/Git/GitSetup.cshtml
+++ b/Views/Git/GitSetup.cshtml
@@ -10,17 +10,17 @@
         <div class="col-md-4 center-block" style="display:flex;align-items:center;margin-top:10%;">
             <div class="card">
                 <div class="card-header">
-                    Git setup
+                    Git connection configuration
                 </div>
                 <div class="card-block">
-                    <form action="" method="post" class="form-horizontal">
+                    <form class="form-horizontal" (ngSubmit)="onSubmit()" #gitSettingsForm="ngForm">
                         <div class="form-group row">
                             <div class="col-md-12">
                                 <div class="input-group">
                                     <span class="input-group-addon">
                                         <i class="fa fa-link"></i>
                                     </span>
-                                    <input type="text" id="input3-group1" name="input3-group1" class="form-control" placeholder="Git server address">
+                                    <input type="text" id="input3-group1" name="input3-group1" class="form-control" placeholder="Git server address" [(ngModel)]="gitServer.address">
                                 </div>
                             </div>
                         </div>
@@ -31,7 +31,7 @@
                                     <span class="input-group-addon">
                                         <i class="fa fa-user"></i>
                                     </span>
-                                    <input type="text" id="input1-group1" name="input1-group1" class="form-control" placeholder="Username">
+                                    <input type="text" id="input1-group1" name="input1-group1" class="form-control" placeholder="Username" [(ngModel)]="gitServer.userName">
                                 </div>
                             </div>
                         </div>
@@ -41,7 +41,7 @@
                                     <span class="input-group-addon">
                                         <i class="fa fa-key"></i>
                                     </span>
-                                    <input type="email" id="input2-group1" name="input2-group1" class="form-control" placeholder="Password">
+                                    <input type="email" id="input2-group1" name="input2-group1" class="form-control" placeholder="Password" [(ngModel)]="gitServer.password">
                                 </div>
                             </div>
                         </div>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="card-footer">
                     <button type="submit" class="btn btn-sm btn-success"><i class="fa fa-dot-circle-o"></i> Submit</button>
-                    <button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Reset</button>
+                    @*<button type="reset" class="btn btn-sm btn-danger"><i class="fa fa-ban"></i> Reset</button>*@
                 </div>
             </div>
         </div>
