--- a/Views/Home/Welcome.cshtml
+++ b/Views/Home/Welcome.cshtml
@@ -4,5 +4,6 @@
 @{
 }
 
-
-Hello !! This is Welcome.cshtml 
+<div style="width:100%;height:100%;background-color:aquamarine">
+    Hello !! This is Welcome.cshtml 
+</div>
